src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-dwF1000-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault column width: F1000\nborder on\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 1240 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 680, bounds: 1240 × 680, states: [Activated]
